fixed button name "RecyclerView" to "Link Collector"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,16 +79,16 @@
         app:layout_constraintVertical_bias="0.20" />
 
     <Button
-        android:id="@+id/btn_recyclerView"
+        android:id="@+id/btn_linkCollector"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="@string/recyclerview"
+        android:text="@string/link_collector"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.30"  />
+        app:layout_constraintVertical_bias="0.30" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
