--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:contentDescription="@string/addlink"
+        android:contentDescription="@string/add_link"
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
