--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -15,8 +15,11 @@
 
         <TextView
             android:id="@+id/tv_date"
-            android:layout_width="50dp"
-            android:layout_height="match_parent" />
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/iv_weather"
@@ -30,11 +33,15 @@
         <TextView
             android:id="@+id/tv_min_temp"
             android:layout_width="50dp"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_max_temp"
             android:layout_width="50dp"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textSize="16sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
